--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,9 @@ version: '3.8'
 services:
   # Python 后端服务（包含 API 和 Agent）
   xianyu-backend:
-    build: ./XianyuAutoAgent
+    build:
+      context: ./XianyuAutoAgent
+      dockerfile: Dockerfile
     image: xianyu-backend:latest
     container_name: xianyu-backend
     restart: unless-stopped
@@ -29,7 +31,9 @@ services:
 
   # React 前端 (Nginx)
   xianyu-admin:
-    build: ./xianyu-admin-web
+    build:
+      context: ./xianyu-admin-web
+      dockerfile: Dockerfile
     image: xianyu-xianyu-admin:latest
     container_name: xianyu-admin
     restart: unless-stopped
